<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".Register">

    <LinearLayout
        android:layout_width="match_parent"
        android:orientation="vertical"
        android:layout_height="wrap_content">


        <TextView
            android:id="@+id/textView_signup"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="30dp"
            android:gravity="center"
            android:text="@string/sign_up"
            android:textSize="30sp"
            android:textStyle="bold"
            android:textColor="@color/black"

            >

        </TextView>

        <com.airbnb.lottie.LottieAnimationView
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:id="@+id/animation_main"
            android:layout_marginHorizontal="160dp"
            android:layout_marginBottom="10dp"
            app:lottie_rawRes="@raw/signup"
            app:lottie_autoPlay="true"
            app:lottie_loop="true"/>

<!--        UserName-->




        <EditText
            android:id="@+id/EditText_username"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textNoSuggestions"
            android:autofillHints="name"

            android:background="#C9B9B9"
            android:textColorHint="#100F0F"
            android:hint="@string/full_name"
            android:drawableLeft="@drawable/person_as"
            android:drawablePadding="20dp"
            android:textColor="@color/black"
            android:padding="15dp"
            android:textSize="15sp"


            android:layout_margin="20dp"
            android:drawableStart="@drawable/person_as">
        </EditText>


<!--        Email-->
        <EditText
            android:id="@+id/EditText_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            android:inputType="textEmailAddress"
            android:autofillHints="emailAddress"
            android:hint="@string/email"
            android:drawableLeft="@drawable/emial_va"
            android:drawablePadding="20dp"
            android:textColor="@color/black"
            android:background="#C9B9B9"
            android:textSize="15sp"
            android:textColorHint="#100F0F"
            android:padding="15dp"
            android:layout_margin="20dp"
            android:drawableStart="@drawable/emial_va">
        </EditText>

<!--        Password-->

        <EditText
            android:id="@+id/password_id"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:hint="@string/password"

            android:drawableLeft="@drawable/info_as"
            android:drawablePadding="10dp"
            android:drawableRight="@drawable/visible_hide"
            android:textColor="@color/black"
            android:background="#C9B9B9"
            android:textSize="15sp"
            android:textColorHint="#100F0F"
            android:padding="15dp"
            android:layout_margin="20dp"
            android:drawableStart="@drawable/info_as"
            android:drawableEnd="@drawable/visible_hide"
            android:autofillHints="" />


        <!--    Re type Password-->
        <EditText
            android:id="@+id/Edittext_repassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            android:inputType="textPassword"
            android:hint="@string/re_type_password"
            android:drawableLeft="@drawable/info_as"
            android:drawablePadding="20dp"
            android:drawableRight="@drawable/visible_hide"
            android:textColor="@color/black"
            android:background="#C9B9B9"
            android:textSize="15sp"
            android:textColorHint="#100F0F"
            android:padding="15dp"
            android:layout_margin="20dp"
            android:autofillHints=""
            android:drawableStart="@drawable/info_as"
            android:drawableEnd="@drawable/visible_hide" />


        <!-- Button Sign Up -->
        <Button
            android:id="@+id/Button_Signup_Account"
            android:layout_width="130dp"
            android:layout_height="48dp"

            android:layout_gravity="center"
            android:layout_margin="50dp"
            android:background="@drawable/custom_button1"


            android:text="Sign up"
            android:textColor="@color/black"
            android:textSize="20sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/TextView_LoginPage"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Alreday have an account login"
            android:layout_gravity="center"
            android:textSize="12sp"


            android:textColor="@color/black"/>

        <ProgressBar
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/progBar"
            android:layout_centerVertical="true"
            android:elevation="10dp"
            android:visibility="gone"/>









    </LinearLayout>





</ScrollView>